gestion user et sécurité ok

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -36,7 +36,7 @@
       <!--      end administration menu-->
 
       <!--      begin gestion stock menu-->
-      <li class="treeview">
+      <!--<li class="treeview">
         <a href="#">
           <i class="fa fa-building"></i> <span>Gestion stock</span>
           <span class="pull-right-container">
@@ -51,7 +51,7 @@
             </a>
           </li>
         </ul>
-      </li>
+      </li>-->
       <!--      end gestion stock menu-->
 
       <!--      begin gestion enfant menu-->
