--- a/src/app/admin/utilisateur/utilisateur-add/utilisateur-add.component.html
+++ b/src/app/admin/utilisateur/utilisateur-add/utilisateur-add.component.html
@@ -1,109 +1,129 @@
-<section class="content-header">
-  <h1>
-    Gestion des utilisateurs
-  </h1>
-  <ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-dashboard"></i> Acceuil</a></li>
-    <li class="active"><a href="#">{{id ? 'Modifier' : 'Ajouter'}} utilisateurs</a></li>
-  </ol>
-</section>
-<section class="content">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="box box-widget no-radius">
+<form (ngSubmit)="save()" ngForm>
+  <mat-card>
+    <h1>
+      Gestion des utilisateurs
+    </h1>
+    <ol class="breadcrumb text-right">
+      <li><a href="#"><i class="fa fa-dashboard"></i> Accueil</a></li>
+      <li class="active">Utilisateurs</li>
+    </ol>
+  </mat-card>
+  <section class="content">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <div class="box box-success">
+
         <div class="box-header">
           <div class="box-title">
-            <button [routerLink]="'/admin/utilisateurs'" class="btn btn-primary no-radius" id="jh-create-entity">
-              <span class="fa fa-list"></span>
-              <span class="hidden-sm-down">
-                  Liste
-              </span>
+            <button [routerLink]="'/admin/utilisateurs'" color="primary" mat-raised-button type="button">
+              <em class="fa fa-list"></em>&nbsp;Liste
             </button>
           </div>
-
         </div>
+
         <div class="box-body">
           <ngx-spinner [fullScreen]="false" [name]="SPINNER_NAME" size="medium" type="timer"></ngx-spinner>
-          <div class="col-md-offset-1 col-md-10">
-            <form #user_add_form="ngForm" (submit)="save()">
-              <div class="row text-center">
-                <div class="col-md-4">
-                  <mat-card>
-                    <div class="form-group row">
-                      <div class="col-md-12">
-                        <div class="row form-group">
-                          <img
-                               [src]="url ? url : '../../../assets/images/login2.png'" mat-card-lg-image alt="avatar User"/>
-                        </div>
-                        <div class="form-group row">
-                          <button type="button" class="btn btn-primary"
-                                  onclick="document.getElementById('avatarUserFile').click()"><em class="fa fa-edit fa-lg"></em></button>
-                          &nbsp;&nbsp;
-                          <button style="margin-top: 2%" class="btn btn-danger text-bold" type="button" *ngIf="url"
-                                  (click)="delete()"><em class="fa fa-trash fa-lg"></em></button>
-                        </div>
-                      </div>
+          <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+              <mat-card>
+                <mat-card-content>
+                  <div class="form-group row">
+                    <div class="col-md-2">
+                      <img [src]="url ? url : '../../../assets/images/login2.png'" alt="photo profil"
+                           mat-card-lg-image/>
                     </div>
-                    <div class="form-group row">
-                      <div class="col-md-12">
-                        <input name="photoprofil" style="display:none;" id="avatarUserFile" type="file"
-                               (change)="onSelectFile($event)"/>
-                      </div>
+                    <div class="col-md-1">
+                      <button class="pull pull-right" color="primary" mat-mini-fab
+                              onclick="document.getElementById('singleFile').click()"
+                              type="button">
+                        <i class="fa fa-edit fa-lg"></i>
+                      </button>
                     </div>
-                  </mat-card>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="nom">Nom</label>
-                    <input [(ngModel)]="utilisateur.nom" class="form-control" id="nom" name="nom"
-                           required type="text">
+                    <div class="col-md-1">
+                      <button (click)="delete()" *ngIf="url" color="accent" mat-mini-fab type="button"><i
+                        class="fa fa-remove fa-lg"></i></button>
+                    </div>
+                    <div class="col-md-12">
+                      <input (change)="onSelectFile($event)" accept="image/png, image/jpeg" id="singleFile"
+                             name="photoprofil"
+                             style="display:none;" type="file"/>
+                    </div>
                   </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="prenom">Prénom</label>
-                    <input [(ngModel)]="utilisateur.prenom" class="form-control" id="prenom" name="prenom"
-                           required type="text">
-                  </div>
-                </div>
-              </div>
 
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="telephone">Téléphone</label>
-                    <input [(ngModel)]="utilisateur.telephone" class="form-control" id="telephone" name="telephone"
-                           required type="text">
+                  <div class="form-group row">
+                    <div class="col-md-6">
+                      <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <mat-label>Nom :</mat-label>
+                        <input [(ngModel)]="utilisateur.nom" matInput name="nom"
+                               required type="text"/>
+                      </mat-form-field>
+                    </div>
+                    <div class="col-md-6">
+                      <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <mat-label>Prénom :</mat-label>
+                        <input [(ngModel)]="utilisateur.prenom" matInput name="prenom"
+                               required type="text"/>
+                      </mat-form-field>
+                    </div>
                   </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="email">Email</label>
-                    <input [(ngModel)]="utilisateur.email" class="form-control" id="email" name="email"
-                           required type="text">
+
+                  <div class="form-group row">
+                    <div class="col-md-6">
+                      <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <mat-label>Téléphone :</mat-label>
+                        <input [(ngModel)]="utilisateur.telephone" matInput name="telephone"
+                               required type="text"/>
+                      </mat-form-field>
+                    </div>
+                    <div class="col-md-6">
+                      <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <mat-label>Email :</mat-label>
+                        <input [(ngModel)]="utilisateur.email" matInput name="email"
+                               required type="text"/>
+                      </mat-form-field>
+                    </div>
                   </div>
-                </div>
-              </div>
 
-              <div class="form-group">
-                <label for="profil">Profil</label>
-                <ngx-select id="profil" [items]="profils" optionTextField="libelle"
-                            (selectionChanges)="onSelectedProfil($event)"></ngx-select>
-              </div>
+                  <div class="form-group row">
+                    <div class="col-md-12">
+                      <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <mat-select (selectionChange)="onSelectedProfil($event)"
+                                    [(value)]="profil"
+                                    [placeholder]="profil && profil.id ? profil.libelle : 'Sélectionnez un profil'">
+                          <mat-option *ngFor="let u of profils" [value]="u">{{u.libelle}}</mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                    </div>
+                  </div>
 
-              <div class="form-group">
-                <label for="description">Adresse</label>
-                <textarea [(ngModel)]="utilisateur.adresse" class="form-control" cols="12" id="description"
-                          name="description" required rows="3"></textarea>
-              </div>
-              <button [disabled]="!user_add_form.valid" class="btn btn-primary" type="submit">Enregistrer</button>
-            </form>
+                  <div class="form-group row">
+                    <div class="col-md-12">
+                      <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <mat-label>Adresse :</mat-label>
+                        <textarea [(ngModel)]="utilisateur.adresse" cols="12" matInput
+                                  name="adresse" required rows="3"></textarea>
+                      </mat-form-field>
+                    </div>
+                  </div>
+
+                  <div class="row form-group">
+                    <div class="col-md-12">
+                      <button color="primary" mat-raised-button type="submit"><em class="fa fa-save"></em>&nbsp;Enregistrer
+                      </button>
+                    </div>
+                  </div>
+                </mat-card-content>
+              </mat-card>
+
+            </div>
           </div>
         </div>
         <div class="box-footer"></div>
       </div>
     </div>
-  </div>
-</section>
+
+  </section>
+</form>
+
+
+
+
