--- a/src/app/gestion-enfants/type-document/type-document-add/type-document-add.component.html
+++ b/src/app/gestion-enfants/type-document/type-document-add/type-document-add.component.html
@@ -1,47 +1,56 @@
-<section class="content-header">
-  <h1>
-    Gestion des types de document
-  </h1>
-  <ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-dashboard"></i> Acceuil</a></li>
-    <li class="active"><a href="#">{{id ? 'Modifier' : 'Ajouter'}} type document</a></li>
-  </ol>
-</section>
-<section class="content">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="box box-widget no-radius">
+<form (ngSubmit)="save()" ngForm>
+  <mat-card>
+    <h1>
+      Gestion des types de document
+    </h1>
+    <ol class="breadcrumb text-right">
+      <li><a href="#"><i class="fa fa-dashboard"></i> Accueil</a></li>
+      <li class="active">type document</li>
+    </ol>
+  </mat-card>
+
+  <section class="content">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <div class="box box-success">
+
         <div class="box-header">
           <div class="box-title">
-            <button [routerLink]="'/gestion-enfant/type-document'" class="btn btn-primary no-radius" id="jh-create-entity">
-              <span class="fa fa-list"></span>
-              <span class="hidden-sm-down">
-                  Liste
-              </span>
+            <button [routerLink]="'/gestion-enfant/type-document'" color="primary" mat-raised-button type="button">
+              <em class="fa fa-list"></em>&nbsp;Liste
             </button>
           </div>
-
         </div>
+
         <div class="box-body">
           <ngx-spinner [fullScreen]="false" [name]="SPINNER_NAME" size="medium" type="timer"></ngx-spinner>
-          <div class="col-md-offset-1 col-md-10">
-            <form #type_doc_add_form="ngForm" (submit)="save()">
+          <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+              <mat-card>
+                <mat-card-content>
 
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="libelle">Libelle</label>
-                    <input [(ngModel)]="typeDocument.libelle" class="form-control" id="libelle" name="libelle"
-                           required type="text">
+                  <div class="form-group row">
+                    <div class="col-md-12">
+                      <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <mat-label>Libelle :</mat-label>
+                        <input [(ngModel)]="typeDocument.libelle" matInput name="libelle"/>
+                      </mat-form-field>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <button [disabled]="!type_doc_add_form.valid" class="btn btn-primary" type="submit">Enregistrer</button>
-            </form>
+                  <div class="row form-group">
+                    <div class="col-md-12">
+                      <button color="primary" mat-raised-button type="submit"><em class="fa fa-save"></em>&nbsp;Enregistrer
+                      </button>
+                    </div>
+                  </div>
+                </mat-card-content>
+              </mat-card>
+
+            </div>
           </div>
         </div>
         <div class="box-footer"></div>
       </div>
     </div>
-  </div>
-</section>
+
+  </section>
+</form>
