--- a/src/app/gestion-enfants/gestion-dossier/inscription/inscription.component.html
+++ b/src/app/gestion-enfants/gestion-dossier/inscription/inscription.component.html
@@ -172,8 +172,8 @@
                     <div class="form-group row">
                       <div class="col-md-6">
                         <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                          <mat-label>Libellé document :</mat-label>
-                          <input name="libelle_document" matInput [(ngModel)]="document.libelle"/>
+                          <mat-label>Libelle :</mat-label>
+                          <input [(ngModel)]="document.libelle" matInput name="libelledocument"/>
                         </mat-form-field>
                       </div>
                       <div class="col-md-6">
