--- a/src/app/gestion-enfants/gestion-dossier/inscription/inscription.component.html
+++ b/src/app/gestion-enfants/gestion-dossier/inscription/inscription.component.html
@@ -173,7 +173,7 @@
                       <div class="col-md-6">
                         <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                           <mat-label>Libelle :</mat-label>
-                          <input [(ngModel)]="document.libelle" matInput name="libelledocument"/>
+                          <input [(ngModel)]="document.libelle" matInput name="libelledoc" type="text"/>
                         </mat-form-field>
                       </div>
                       <div class="col-md-6">
