--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -64,6 +64,13 @@
         </a>
         <ul class="treeview-menu">
           <li>
+            <a [routerLinkActive]="'active'" [routerLink]="'/gestion-enfant/gestion-dossier'"
+               href="javascript:void(0);">
+              <em class="fa fa-product-hunt"> </em>
+              <span>Dossiers Enfants</span>
+            </a>
+          </li>
+          <li>
             <a [routerLinkActive]="'active'" [routerLink]="'/gestion-enfant/inscription'" href="javascript:void(0);">
               <em class="fa fa-product-hunt"> </em>
               <span>Inscription</span>
