--- a/src/app/gestion-enfants/gestion-dossier/gestion-dossier/gestion-dossier.component.html
+++ b/src/app/gestion-enfants/gestion-dossier/gestion-dossier/gestion-dossier.component.html
@@ -49,96 +49,134 @@
 
             <div class="tab-content">
               <ngx-spinner [fullScreen]="false" [name]="SPINNER_NAME" size="medium" type="timer"></ngx-spinner>
+
               <div class="tab-pane active" id="archive">
                 <div *ngIf="dossierList?.length === 0" class="alert alert-warning no-radius">
                   <span>Aucun résultat trouvé</span>
                 </div>
-                <div class="table-responsive">
-                  <table *ngIf="dossierList && dossierList.length > 0" aria-describedby="page-heading"
-                         class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th class="text-bold">N°</th>
-                      <th class="text-bold">Photo</th>
-                      <th class="text-bold">Code</th>
-                      <th class="text-bold">Nom & Prénom</th>
-                      <th class="text-bold">Date de naissance</th>
-                      <th class="text-bold">Site</th>
-                      <th class="text-bold">Documents</th>
-                      <th class="text-center text-bold">Actions</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr
-                      *ngFor="let s of (dossierListFilterd && dossierListFilterd.length > 0 ? dossierListFilterd : dossierList)">
-                      <td>{{(dossierListFilterd && dossierListFilterd.length > 0 ? dossierListFilterd : dossierList).indexOf(s) + 1}}</td>
-                      <td class="text-center">
-                        <mat-card>
-                          <img [src]="s.enfant ? s.enfant.photo ? s.enfant.photo
-                          : '../../../assets/images/login2.png' : '../../../assets/images/login2.png'"
-                               alt="User Image" mat-card-sm-image>
-                        </mat-card>
-                      </td>
-                      <td>{{s.code ? s.code : ''}}</td>
-                      <td>{{s.enfant ? s.enfant.nom ? s.enfant.nom : '' : ''}} {{s.enfant ? s.enfant.prenom ? s.enfant.prenom : '' : ''}}</td>
-                      <td>{{s.enfant ? s.enfant.dateNaissance ? (s.enfant.dateNaissance | date : 'dd/MM/yyyy') : '' : ''}}</td>
-                      <td>{{s.enfant ? s.enfant.site ? s.enfant.site.libelle ? s.enfant.site.libelle : '' : '' : ''}}</td>
-                      <td>
-                        <button (click)="onDisplayDocumentList(s)" class="btn btn-default"
-                                color="primary" data-target="#documentModal" data-toggle="modal" mat-mini-fab
-                                matTooltip="Liste documents" type="button">
-                          <em class="fa fa-list fa-lg"></em></button>
-                      </td>
-                      <td class="text-center">
-                        <button [routerLink]="'/gestion-enfant/sites/edit/' + s.id" class="btn btn-primary"
-                                color="primary" mat-mini-fab
-                                matTooltip="Modifier" type="button">
-                          <em
-                            class="fa fa-edit fa-lg"></em></button>
-                        &nbsp;&nbsp;&nbsp;
-                        <button (click)="onDelete(s)" *ngIf="!s.archive" class="btn btn-danger" color="warn"
-                                data-target="#deleteModal" data-toggle="modal"
-                                mat-mini-fab
-                                matTooltip="Supprimer" type="button">
-                          <em class="fa fa-trash fa-lg"></em></button>
-                        &nbsp;&nbsp;&nbsp;
-                      </td>
-                    </tr>
-                    </tbody>
-                  </table>
+
+                <div *ngIf="dossierList && dossierList.length > 0" class="form-group row">
+                  <mat-card *ngFor="let dos of
+                            (dossierListFilterd && dossierListFilterd.length > 0
+                            ? dossierListFilterd : dossierList) | paginate: { id: 'noneArchiveList',
+                                                      itemsPerPage: 10,
+                                                      currentPage: page}"
+                            [routerLink]="'/gestion-enfant/afficher-dossier/' + dos.id"
+                            appMaterialElevation
+                            class="col-md-2 change-cursor"
+                            style="margin: 1%;">
+                    <div class="progress">
+                      <div [ngClass]="(dos.nombreDocFournis*100)/dos.nombreDocAFournir <= 40
+                      ? 'progress-bar progress-bar-danger progress-bar-striped'
+                                      : (dos.nombreDocFournis*100)/dos.nombreDocAFournir > 40 && (dos.nombreDocFournis*100)/dos.nombreDocAFournir <=80
+                                      ? 'progress-bar progress-bar-warning progress-bar-striped'
+                                      : (dos.nombreDocFournis*100)/dos.nombreDocAFournir > 80 && (dos.nombreDocFournis*100)/dos.nombreDocAFournir <= 100
+                                      ? 'progress-bar progress-bar-success progress-bar-striped'
+                                      : 'progress-bar progress-bar-danger progress-bar-striped'"
+                           [style]="'width:' + (dos.nombreDocFournis*100)/dos.nombreDocAFournir + '%'">
+                        {{((dos.nombreDocFournis * 100) / dos.nombreDocAFournir) | number: '1.0-0' }}%
+                      </div>
+                    </div>
+                    <mat-card-header>
+                      <mat-card-subtitle><strong>Dossier N° :</strong> {{dos.code ? dos.code : ''}}</mat-card-subtitle>
+                    </mat-card-header>
+
+                    <mat-card-content>
+                      <div class="form-group row">
+                        <div class="col-md-12 text-center">
+                          <img [src]="dos.enfant ? dos.enfant.photo ? dos.enfant.photo
+                          : '../../../assets/images/login2.png'
+                          : '../../../assets/images/login2.png'" alt="photo profil"
+                               mat-card-lg-image/>
+                        </div>
+                      </div>
+                    </mat-card-content>
+
+                    <mat-card-footer style="padding-left: 10%">
+                      <div class="form-group">
+                        <mat-card-subtitle><strong>Nom
+                          :</strong> {{dos.enfant ? dos.enfant.nom ? dos.enfant.nom : '' : ''}}</mat-card-subtitle>
+
+                        <mat-card-subtitle><strong>Prénom
+                          :</strong> {{dos.enfant ? dos.enfant.prenom ? dos.enfant.prenom : '' : ''}}
+                        </mat-card-subtitle>
+                      </div>
+                    </mat-card-footer>
+                  </mat-card>
+                </div>
+                <div class="form-group row text-center">
+                  <pagination-controls (pageChange)="page = $event" autoHide="true"
+                                       directionLinks="true"
+                                       id="noneArchiveList"
+                                       nextLabel="Suivant"
+                                       previousLabel="Précédent"
+                                       responsive="true"></pagination-controls>
                 </div>
               </div>
+
               <div class="tab-pane" id="nonArchive">
                 <div *ngIf="dossierListArchived?.length === 0" class="alert alert-warning no-radius">
                   <span>Aucun résultat trouvé</span>
                 </div>
-                <div class="table-responsive">
-                  <table *ngIf="dossierListArchived && dossierListArchived.length > 0" aria-describedby="page-heading"
-                         class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>N°</th>
-                      <th>Code</th>
-                      <th>Libellé</th>
-                      <th class="text-center">Actions</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr
-                      *ngFor="let s of (dossierListFilterd && dossierListFilterd.length > 0 ? dossierListFilterd : dossierListArchived)">
-                      <td>{{(dossierListFilterd && dossierListFilterd.length > 0 ? dossierListFilterd : dossierListArchived).indexOf(s) + 1}}</td>
-                      <td>{{s.code ? s.code : ''}}</td>
-                      <td>{{s.libelle ? s.libelle : ''}}</td>
-                      <td class="text-center">
-                        <button (click)="restore(s)" *ngIf="s.archive" class="btn btn-warning" color="primary"
-                                mat-mini-fab matTooltip="Restaurer" type="button">
-                          <em class="fa fa-undo fa-lg"></em></button>
-                      </td>
-                    </tr>
-                    </tbody>
-                  </table>
+                <div *ngIf="dossierListArchived && dossierListArchived.length > 0" class="form-group row">
+                  <mat-card *ngFor="let dos of
+                            (dossierListFilterd && dossierListFilterd.length > 0
+                            ? dossierListFilterd : dossierListArchived) | paginate: { id: 'archiveList',
+                                                      itemsPerPage: 10,
+                                                      currentPage: page}"
+                            [routerLink]="'/gestion-enfant/afficher-dossier/' + dos.id"
+                            appMaterialElevation
+                            class="col-md-2 change-cursor"
+                            style="margin: 1%;">
+                    <div class="progress">
+                      <div [ngClass]="(dos.nombreDocFournis*100)/dos.nombreDocAFournir <= 40
+                      ? 'progress-bar progress-bar-danger progress-bar-striped'
+                                      : (dos.nombreDocFournis*100)/dos.nombreDocAFournir > 40 && (dos.nombreDocFournis*100)/dos.nombreDocAFournir <=80
+                                      ? 'progress-bar progress-bar-warning progress-bar-striped'
+                                      : (dos.nombreDocFournis*100)/dos.nombreDocAFournir > 80 && (dos.nombreDocFournis*100)/dos.nombreDocAFournir <= 100
+                                      ? 'progress-bar progress-bar-success progress-bar-striped'
+                                      : 'progress-bar progress-bar-danger progress-bar-striped'"
+                           [style]="'width:' + (dos.nombreDocFournis*100)/dos.nombreDocAFournir + '%'">
+                        {{((dos.nombreDocFournis * 100) / dos.nombreDocAFournir) | number: '1.0-0' }}%
+                      </div>
+                    </div>
+                    <mat-card-header>
+                      <mat-card-subtitle><strong>Dossier N° :</strong> {{dos.code ? dos.code : ''}}</mat-card-subtitle>
+                    </mat-card-header>
+
+                    <mat-card-content>
+                      <div class="form-group row">
+                        <div class="col-md-12 text-center">
+                          <img [src]="dos.enfant ? dos.enfant.photo ? dos.enfant.photo
+                          : '../../../assets/images/login2.png'
+                          : '../../../assets/images/login2.png'" alt="photo profil"
+                               mat-card-lg-image/>
+                        </div>
+                      </div>
+                    </mat-card-content>
+
+                    <mat-card-footer style="padding-left: 10%">
+                      <div class="form-group">
+                        <mat-card-subtitle><strong>Nom
+                          :</strong> {{dos.enfant ? dos.enfant.nom ? dos.enfant.nom : '' : ''}}</mat-card-subtitle>
+
+                        <mat-card-subtitle><strong>Prénom
+                          :</strong> {{dos.enfant ? dos.enfant.prenom ? dos.enfant.prenom : '' : ''}}
+                        </mat-card-subtitle>
+                      </div>
+                    </mat-card-footer>
+                  </mat-card>
+                </div>
+                <div class="form-group row text-center">
+                  <pagination-controls (pageChange)="page = $event" autoHide="true"
+                                       directionLinks="true"
+                                       id="archiveList"
+                                       nextLabel="Suivant"
+                                       previousLabel="Précédent"
+                                       responsive="true"></pagination-controls>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
@@ -164,93 +202,6 @@
         <button class="btn btn-secondary" data-dismiss="modal" type="button">NON</button>
         <button (click)="delete()" class="btn btn-danger" data-dismiss="modal" type="button">OUI</button>
       </div>
-    </div>
-  </div>
-</div>
-
-<div *ngIf="documentList && documentList.length > 0" aria-hidden="true" aria-labelledby="documentModal"
-     class="modal fade" id="documentModal" role="dialog" tabindex="-1">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="documentModalLabel">Liste des documents</h5>
-        <button aria-label="Close" class="close" data-dismiss="modal" type="button">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="table-responsive">
-          <table aria-describedby="page-heading"
-                 class="table table-striped">
-            <thead>
-            <tr>
-              <th>N°</th>
-              <th>Code</th>
-              <th>Libellé</th>
-              <th>Type document</th>
-              <th class="text-center">Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr
-              *ngFor="let s of (documentListFilterd && documentListFilterd.length > 0 ? documentListFilterd : documentList)">
-              <td>{{(documentListFilterd && documentListFilterd.length > 0 ? documentListFilterd : documentList).indexOf(s) + 1}}</td>
-              <td>{{s.code ? s.code : ''}}</td>
-              <td>{{s.libelle ? s.libelle : ''}}</td>
-              <td>{{s.typeDocument ? s.typeDocument.libelle ? s.typeDocument.libelle : '' : ''}}</td>
-              <td class="text-center">
-                <button (click)="previewDoc(s.document)" class="btn btn-default" color="primary"
-                        data-target="#previewModal"
-                        data-toggle="modal"
-                        mat-mini-fab matTooltip="Voir document" type="button">
-                  <em class="fa fa-eye fa-lg"></em></button>
-                &nbsp;&nbsp;
-                <button (click)="downloadDoc(s.document, s.libelle)" class="btn btn-default"
-                        color="accent"
-                        mat-mini-fab matTooltip="Télécharger" type="button">
-                  <em class="fa fa-download fa-lg"></em></button>
-                &nbsp;&nbsp;
-                <button (click)="printDoc(s.document)" class="btn btn-default"
-                        color="accent"
-                        mat-mini-fab matTooltip="Imprimer" type="button">
-                  <em class="fa fa-print fa-lg"></em></button>
-                &nbsp;&nbsp;
-                <button class="btn btn-primary" color="primary"
-                        mat-mini-fab matTooltip="Modifier" type="button">
-                  <em class="fa fa-edit fa-lg"></em></button>
-                &nbsp;&nbsp;
-                <button class="btn btn-danger" color="warn"
-                        mat-mini-fab matTooltip="Supprimer" type="button">
-                  <em class="fa fa-trash fa-lg"></em></button>
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-danger" color="warn" data-dismiss="modal" mat-flat-button type="button">Fermer</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div aria-hidden="true" aria-labelledby="previewModal" class="modal fade" id="previewModal" role="dialog" tabindex="-1">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button aria-label="Close" class="close" data-dismiss="modal" type="button">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <pdf-viewer [original-size]="true"
-                    [render-text]="true"
-                    [src]="previewUrl"
-                    style="display: block; height: 100vh;"
-        ></pdf-viewer>
-      </div>
-
     </div>
   </div>
 </div>
